--- a/misc/fp.conf
+++ b/misc/fp.conf
@@ -30,16 +30,18 @@ EnableSendfile off
 # This for the flask web services. The WSGIScriptAlias commands define
 # entry points, the WSGIPythonPath entry is necessary for the entry point
 # code to be able to access python packages in the fpa directory.
+# 10-feb-2016 There is now only a single interface, supporting both the
+# app protocol and the admin interface.
 
 # Entry point for the app web service (i.e. the app talks to here):
-WSGIScriptAlias /fprime ${FP_ROOT}fpa/wsgi_app_entry.py
+#WSGIScriptAlias /fprime ${FP_ROOT}fpa/wsgi_app_entry.py
 # Test version:
-WSGIScriptAlias /fprimeDev ${FP_ROOT}fptest/fpa/wsgi_app_entry.py
+#WSGIScriptAlias /fprimeDev ${FP_ROOT}fptest/fpa/wsgi_app_entry.py
 
 # Entry point for the user web interface:
 WSGIScriptAlias /fieldprime ${FP_ROOT}fpa/wsgi_adm_entry.py
 # Test version:
-WSGIScriptAlias /fieldprimeDev ${FP_ROOT}fptest/fpa/wsgi_adm_entry.py
+#WSGIScriptAlias /fieldprimeDev ${FP_ROOT}fptest/fpa/wsgi_adm_entry.py
 
 
 # Where to look for packages:
