--- a/misc/fp.conf
+++ b/misc/fp.conf
@@ -34,7 +34,7 @@ EnableSendfile off
 # app protocol and the admin interface.
 
 # Entry point for the app web service (i.e. the app talks to here):
-#WSGIScriptAlias /fprime ${FP_ROOT}fpa/wsgi_app_entry.py
+WSGIScriptAlias /fprime ${FP_ROOT}fpa/wsgi_adm_entry.py
 # Test version:
 #WSGIScriptAlias /fprimeDev ${FP_ROOT}fptest/fpa/wsgi_app_entry.py
 
