--- a/misc/fp.conf
+++ b/misc/fp.conf
@@ -51,5 +51,5 @@ WSGIPythonPath ${FP_ROOT}fpa
 WSGIPassAuthorization On
 
 # Virtual env dir:
-WSGIPythonHome ${FP_ROOT}fieldprime/pythonEnv
+WSGIPythonHome ${FP_ROOT}/pythonEnv
 
