--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,7 @@ fp_mysql/docker.mysql.primed/makefile -text
 fp_mysql/forEachDb.sh -text
 fp_mysql/fprime.create.tables.sql -text
 fp_mysql/fpsys.sql -text
+fp_mysql/make_passhash.py -text
 fp_mysql/new_fprime_user.sh -text
 fp_mysql/projects.sql -text
 fp_mysql/update.sql -text
