--- a/.gitattributes
+++ b/.gitattributes
@@ -37,6 +37,7 @@ fpa/fp_web_admin/forms.py -text
 fpa/fp_web_admin/fpAppWapi.py -text
 fpa/fp_web_admin/fpRestApi.py -text
 fpa/fp_web_admin/fpRestTest.py -text
+fpa/fp_web_admin/fpSess.py -text
 fpa/fp_web_admin/fpTrait.py -text
 fpa/fp_web_admin/fpTrial.py -text
 fpa/fp_web_admin/fpUtil.py -text
