--- a/misc/requirements.txt
+++ b/misc/requirements.txt
@@ -4,9 +4,10 @@ Jinja2==2.8
 MarkupSafe==0.23
 MySQL-python==1.2.5
 SQLAlchemy==1.0.9
-Werkzeug==0.10.4
+Werkzeug==0.11.5
 argparse==1.2.1
 cycler==0.9.0
+flask-swagger==0.2.12
 itsdangerous==0.24
 numpy==1.10.1
 passlib==1.6.5
