Removed sensitive information

--- a/misc/fp.conf
+++ b/misc/fp.conf
@@ -23,7 +23,7 @@ EnableSendfile off
 </IfModule>
 
 # NB FP_ROOT needs to be defined in /etc/apache2/envvars
-# EG: export FP_ROOT=***REMOVED***/
+# EG: export FP_ROOT=/srv/www/fpserver/
 
 #
 # Entry point for the FieldPrime app and user web interfaces:
