--- a/.gitattributes
+++ b/.gitattributes
@@ -27,7 +27,7 @@ fpa/fp_common/config.py -text
 fpa/fp_common/const.py -text
 fpa/fp_common/fpsys.py -text
 fpa/fp_common/models.py -text
-fpa/fp_common/***REMOVED***.py -text
+fpa/fp_common/nexus.py -text
 fpa/fp_common/test.py -text
 fpa/fp_common/util.py -text
 fpa/fp_web_admin/__init__.py -text
