Updated apache conf (if runnung outside docker)

--- a/misc/fp.conf
+++ b/misc/fp.conf
@@ -23,7 +23,7 @@ EnableSendfile off
 </IfModule>
 
 # NB FP_ROOT needs to be defined in /etc/apache2/envvars
-# EG: export FP_ROOT=/srv/www/fpserver/
+# EG: export FP_ROOT=/<PATH>/fpserver/
 
 #
 # Entry point for the FieldPrime app and user web interfaces:
@@ -34,12 +34,12 @@ EnableSendfile off
 # app protocol and the admin interface.
 
 # Entry point for the app web service (i.e. the app talks to here):
-WSGIScriptAlias /fprime ${FP_ROOT}fpa/wsgi_adm_entry.py
+WSGIScriptAlias /fprime ${FP_ROOT}fpa/fp_admin_entry.wsgi
 # Test version:
 #WSGIScriptAlias /fprimeDev ${FP_ROOT}fptest/fpa/wsgi_app_entry.py
 
 # Entry point for the user web interface:
-WSGIScriptAlias /fieldprime ${FP_ROOT}fpa/wsgi_adm_entry.py
+WSGIScriptAlias /fieldprime ${FP_ROOT}fpa/fp_admin_entry.wsgi
 # Test version:
 #WSGIScriptAlias /fieldprimeDev ${FP_ROOT}fptest/fpa/wsgi_adm_entry.py
 
