--- a/fpa/requirements.txt
+++ b/fpa/requirements.txt
@@ -21,4 +21,7 @@ requests==2.11.0
 PyYAML==3.11 
 flask-swagger==0.2.12
 Flask-HTTPAuth==3.1.1
-#Flask-HTTPAuth==2.7.0
+
+# JWT
+python-jwt==3.2.3
+jwcrypto==0.5.0
