--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,9 @@ jobs:
       versionSpec: '$(python.version)'
       architecture: 'x64'
 
+  - script: apt-get install -y libmysqlclient-dev libldap2-dev libsasl2-dev
+  - displayName: 'Install linux dependencies'
+
   - script: python -m pip install --upgrade pip && pip install -r fpa/requirements.txt
     displayName: 'Install dependencies'
 
