--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ jobs:
       versionSpec: '$(python.version)'
       architecture: 'x64'
 
-  - script: apt-get install -y libmysqlclient-dev libldap2-dev libsasl2-dev
+  - script: sudo apt-get install -y libmysqlclient-dev libldap2-dev libsasl2-dev
     displayName: 'Install linux dependencies'
 
   - script: python -m pip install --upgrade pip && pip install -r fpa/requirements.txt
