--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ jobs:
 
   - script: |
       pip install pytest Flask-Testing
-      pytest fpa/tests --doctest-modules --junitxml=junit/test-results.xml
+      cd fpa && pytest tests --doctest-modules --junitxml=junit/test-results.xml
     displayName: 'pytest'
 
   - task: PublishTestResults@2
