--- a/azure-pipeline-py2.yml
+++ b/azure-pipeline-py2.yml
@@ -20,7 +20,7 @@ jobs:
       versionSpec: '$(python.version)'
       architecture: 'x64'
 
-  - script: sudo apt-get install -y libmysqlclient-dev libldap2-dev libsasl2-dev
+  - script: sudo apt-get update && sudo apt-get install -y libmysqlclient-dev libldap2-dev libsasl2-dev
     displayName: 'Install linux dependencies'
 
   - script: python -m pip install --upgrade pip && pip install -r fpa/requirements.txt
