--- a/fpa/requirements.txt
+++ b/fpa/requirements.txt
@@ -1,27 +1,24 @@
 Flask==0.10.1
+Flask-HTTPAuth==3.1.1
 Jinja2==2.8
 MarkupSafe==0.23
 MySQL-python==1.2.5
+PyYAML==3.11
 SQLAlchemy==1.0.9
-Werkzeug==0.10.4
+Werkzeug==0.15.3
 argparse==1.2.1
 cycler==0.9.0
+flask-swagger==0.2.12
 itsdangerous==0.24
+jwcrypto==0.5.0
+numpy==1.10.1
 passlib==1.6.5
 pyparsing==2.0.5
 python-dateutil==2.4.2
+python-jwt==3.2.3
 python-ldap==2.4.22
 pytz==2015.7
+requests==2.11.0
 simplejson==3.8.1
 six==1.10.0
 wsgiref==0.1.2
-
-#Missing deps
-requests==2.11.0
-PyYAML==3.11 
-flask-swagger==0.2.12
-Flask-HTTPAuth==3.1.1
-
-# JWT
-python-jwt==3.2.3
-jwcrypto==0.5.0
